Fix Java compatibility issues for Java 17
Co-authored-by: simonsimme <64027803+simonsimme@users.noreply.github.com>